@@ -1,3 +1,8 @@
+2014-01-13  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* dbxfile.c [WIN32]: Include <wchar.h>.  Avoid use of
+	uninitialized variables cmdvw and qvw.
+
 2014-01-12  TANAKA Takuji  <KXD02663@nifty.ne.jp>
 
 	* dvipdfm.c: Add '--kpathsea-debug' option and
